log
Thu 24 Aug 2023 08:27:35 PM UTC: 
 list.c | 23 ++++++++++++++++++++++-
 1 file changed, 22 insertions(+), 1 deletion(-)
 tests:  5|4
total_score: 25/70
3d392bf
Thu 24 Aug 2023 08:30:54 PM UTC: 
 list.c | 17 +++++++++++++++++
 1 file changed, 17 insertions(+)
 tests:  9|3
total_score: 35/70
e6205e9
Thu 24 Aug 2023 08:35:31 PM UTC: 
 list.c | 22 ++++++++++++++++++++++
 1 file changed, 22 insertions(+)
In file included from test.c:5:
list.c:88:7: error: redefinition of ‘createNode’
   88 | Node *createNode(void *data) {
      |       ^~~~~~~~~~
list.c:22:8: note: previous definition of ‘createNode’ with type ‘Node *(void *)’
   22 | Node * createNode(void * data) {
      |        ^~~~~~~~~~
Compilation failed
42585c7
Thu 24 Aug 2023 08:36:40 PM UTC: 
 list.c | 12 ------------
 1 file changed, 12 deletions(-)
 tests:  10|2
total_score: 45/70
e2e2c07
Thu 24 Aug 2023 08:38:28 PM UTC: 
 list.c | 17 +++++++++++++++++
 1 file changed, 17 insertions(+)
 tests:  11|1
total_score: 55/70
98270ce
Thu 24 Aug 2023 08:40:41 PM UTC: 
 list.c | 29 +++++++++++++++++++++++++++++
 1 file changed, 29 insertions(+)
 tests:  12|0
total_score: 70/70
c9ab8da
Thu 24 Aug 2023 08:48:50 PM UTC: 
 list.c | 18 +++++++++---------
 1 file changed, 9 insertions(+), 9 deletions(-)
 tests:  12|0
total_score: 70/70
a7fb0ba
Thu 24 Aug 2023 08:50:12 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘pushCurrent’:
list.c:109:16: error: ‘return’ with a value, in function returning void [-Werror=return-type]
  109 |         return NULL;
      |                ^~~~
list.c:106:6: note: declared here
  106 | void pushCurrent(List * list, void * data) {
      |      ^~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
ca8721b
Thu 24 Aug 2023 08:50:41 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  12|0
total_score: 70/70
610f3da
Thu 24 Aug 2023 08:53:31 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  12|0
total_score: 70/70
ffa8c93
